<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/measuring_menu_create_point"
          android:title="@string/menu_item_create_point"/>
    
    <item android:id="@+id/measuring_menu_cancel_point"
          android:title="@string/menu_item_cancel_point"/>
    
    <item android:id="@+id/measuring_menu_create_line"
          android:title="@string/menu_item_create_line"/>
    
    <item android:id="@+id/measuring_menu_cancel_line"
          android:title="@string/menu_item_cancel_line"/>

    <item android:id="@+id/measuring_menu_create_beacon"
          android:title="@string/menu_item_create_beacon"/>
    
    <item android:id="@+id/measuring_menu_cancel_beacon"
          android:title="@string/menu_item_cancel_beacon"/>
    
</menu>
