<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true" >
    
    <CheckBox android:id="@+id/server_mode_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_mode_navigation"/>
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <EditText android:id="@+id/address_edit"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:hint="@string/address_edit"/>
    </LinearLayout>
    
    <CheckBox android:id="@+id/log_mode_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_mode_navigation"/>
    
    <CheckBox android:id="@+id/log_output_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_output"/>
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView android:id="@+id/text_view_2"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:layout_marginTop="-20dp"
            android:textSize="10dp"/>
        
        <Button android:id="@+id/start_button"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_marginRight="5dp"
            android:text="@string/start_button"/>
    
    </LinearLayout>
    
    <TextView android:id="@+id/text_view"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="10dp"
        android:maxLines="32"
        android:scrollbars="vertical"/>
    
</LinearLayout>
