<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp">
        
        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/load_content_user_field"/>
        
        <EditText android:id="@+id/load_content_user_edit"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:singleLine="true"
            android:inputType="textVisiblePassword|textCapCharacters"
            android:digits="1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ-"
            android:maxLength="20"
            android:textSize="13sp"/>
    </LinearLayout>
    
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp">
        
        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/load_content_location_field"/>
        
        <EditText android:id="@+id/load_content_location_edit"
            android:layout_width="fill_parent"
            android:layout_height="50dp"/>
    </LinearLayout>
    
    <CheckBox android:id="@+id/upload_content_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_content_option"/>
    
    <CheckBox android:id="@+id/load_content_forced_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_content_forced"/>
    
    <ProgressBar android:id="@+id/load_content_progress_bar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         style="@android:style/Widget.ProgressBar.Horizontal"
         android:layout_marginRight="5dp" />
    
</LinearLayout>
