<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp">
        
        <TextView android:id="@+id/measuring_object_text_view_beacon_id"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/field_beacon_id"/>
        
        <EditText android:id="@+id/measuring_object_dialog_beacon_id"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textSize="9sp"/>
    </LinearLayout>
    
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp">
        
        <TextView android:id="@+id/measuring_object_text_view_name"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/field_name"/>
        
        <EditText android:id="@+id/measuring_object_dialog_name"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:scrollHorizontally="true"
            android:singleLine="true"/>
    </LinearLayout>
    
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp">
        
        <TextView android:id="@+id/measuring_object_text_view_x1"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/field_x1"/>
        
        <EditText android:id="@+id/measuring_object_dialog_x1"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:scrollHorizontally="true"
            android:singleLine="true"/>
    </LinearLayout>
    
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp">
        
        <TextView android:id="@+id/measuring_object_text_view_y1"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/field_y1"/>
        
        <EditText android:id="@+id/measuring_object_dialog_y1"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:scrollHorizontally="true"
            android:singleLine="true"/>
    </LinearLayout>
    
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp">
        
        <TextView android:id="@+id/measuring_object_text_view_x2"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/field_x2"/>
        
        <EditText android:id="@+id/measuring_object_dialog_x2"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:scrollHorizontally="true"
            android:singleLine="true"/>
    </LinearLayout>
    
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp">
        
        <TextView android:id="@+id/measuring_object_text_view_y2"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/field_y2"/>
        
        <EditText android:id="@+id/measuring_object_dialog_y2"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:scrollHorizontally="true"
            android:singleLine="true"/>
    </LinearLayout>
    
</LinearLayout>
