<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <ImageView android:id="@+id/measuring_map_image_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>
    
    <ImageView android:id="@+id/measuring_center_sight"
        android:src="@drawable/target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
    
    <ImageView android:id="@+id/measuring_scale_image_view"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="right|bottom"/>
    
    <LinearLayout android:id="@+id/measuring_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#AA000001">
        
        <TextView android:id="@+id/map_measuring_prompt"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1.0"
            android:textSize="15dp"
            android:background="@null"/>
        
        <Button android:id="@+id/map_measuring_ok_button"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:text="@string/ok_button"
            android:background="#cdcdcd"/>
        
        <Button android:id="@+id/map_measuring_start_button"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="#cdcdcd"
            android:text="@string/start_button"/>
        
        <Button android:id="@+id/map_measuring_stop_button"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="#cdcdcd"
            android:text="@string/stop_button"/>
    
    </LinearLayout>
    
    <Button android:id="@+id/measuring_prev_floor_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginLeft="0dp"
        android:layout_gravity="top|left"
        android:background="@drawable/back"/>
    
    <TextView android:id="@+id/measuring_current_floor_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:textSize="20dp"
        android:textColor="#000000"/>
        
    <Button android:id="@+id/measuring_next_floor_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginRight="0dp"
        android:layout_gravity="top|right"
        android:background="@drawable/forward"/>
    
</FrameLayout>
